--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow"><!--REMOVE THIS FOR PROD!-->
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
-    <meta name="author" content=" ">
+    <meta name="description" content="The Circle Theory a detailed explanation as given by Harry McKinney">
+    <meta name="keywords" content="The Circle Theory, Threory of life, life is a series of circles">
+    <meta name="author" content="Harry McKinney">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:url" content="http://www.site.com/index.html" />
+    <meta property="og:url" content="http://www.thecircletheory.me/index.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content=" " />
-    <meta property="og:description" content=" " />
+    <meta property="og:title" content="The Circle Theory Explanined" />
+    <meta property="og:description" content="a detailed explanation of the circle of life theory by Harry McKinney" />
     <meta property="og:image" content=" http:// / .png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@handle" />
-    <meta name="twitter:title" content=" " />
-    <meta name="twitter:description" content=" " />
+    <meta name="twitter:title" content="The Circle Theory" />
+    <meta name="twitter:description" content="a detailed explanation of life as a series of challenges in cirlces" />
     <meta name="twitter:image" content="https:// .jpg" />
-    <title> </title>
-    <link rel="icon" type="image/png" href="./img/favicon.ico">
-    <link rel="stylesheet" href="./css/ .css"/>
-    <script src="./js/ / .js"></script>
+    <title>The Circle Theory</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="stylesheet" href="./css/style.css"/>
+    <script src="./js/console.js"></script>
 
 </head>
 <body>
