--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:description" content="a detailed explanation of life as a series of challenges in cirlces" />
     <meta name="twitter:image" content="https:// .jpg" />
     <title>The Circle Theory</title>
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.ico">
     <link rel="stylesheet" href="./css/style.css"/>
     <script src="./js/console.js"></script>
 
