changes to class

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
 </head>
 <body>
-  <hr>
-  <p>Future home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
-  <hr>
+  <div class="container">
+    <hr>
+      <p>Future home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
+    <hr>
+  </div>
 </body>
 </html>
