--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
       <p>Future home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
     <hr>
   </div>
+  <div>
+    <p>Ever wonder what the "big picture" for life is? I do too, this theory is backed by personal research and theories that I have collected over the years.</p>
+  </div>
 </body>
 </html>
