updates to style

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body>
   <div class="container">
     <hr>
-      <p>Future home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
+      <p class="header">Future home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
     <hr>
-  <div style="text-align:left;">
-    <p>Ever wonder what the "big picture" for life is? I do too, this theory is backed by personal research and theories that I have collected over the years.
+  <div>
+    <p class="first-paragraph">Ever wonder what the "big picture" for life is? I do too, this theory is backed by personal research and theories that I have collected over the years.
     My first year in college I was required to take a philosophy class, it started with the most basic of all questions..... "Is life a straight line or a circle?"; the assignmenet was to write an eight page paper explaining your "position" on the subject.</p>
   </div>
   </div>
