--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <div>
     <p class="first-paragraph">Ever wonder what the "big picture" for life is? I do too, this theory is backed by personal research and theories that I have collected over the years.
     My first year in college I was required to take a philosophy class, it started with the most basic of all questions..... "Is life a straight line or a circle?"; the assignmenet was to write an eight page paper explaining your "position" on the subject.</p>
+    <p>Seems like an easy exercise...right? If you are thinking that then I suggest you try it yourself. Prior to this assignment I had believed, (and believed firmly), that life was undoubtably a straight line, a series of events that occured due to happenstance, free will and opportunites based on external environment.</p>
+    <p>So I did what anyone would do, I started drafting this paper. Something happened along the way though...</p>
   </div>
   </div>
 </body>
