changes to content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     My first year in college I was required to take a philosophy class, it started with the most basic of all questions..... "Is life a straight line or a circle?"; the assignmenet was to write an eight page paper explaining your "position" on the subject.</p>
     <p>Seems like an easy exercise...right? If you are thinking that then I suggest you try it yourself. Prior to this assignment I had believed, (and believed firmly), that life was undoubtably a straight line, a series of events that occured due to happenstance, free will and opportunites based on external environment.</p>
     <p>So I did what anyone would do, I started drafting this paper. Something happened along the way though...</p>
-    <p></p>
+    <p>About five pages in , I realized that life wasn't a straight line afterall, I also relaized that it wasn't a circle either.</p>
     <p></p>
   </div>
   </div>
