--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <p>Seems like an easy exercise...right? If you are thinking that then I suggest you try it yourself. Prior to this assignment I had believed, (and believed firmly), that life was undoubtably a straight line, a series of events that occured due to happenstance, free will and opportunites based on external environment.</p>
     <p>So I did what anyone would do, I started drafting this paper. Something happened along the way though...</p>
     <p>About five pages in , I realized that life wasn't a straight line afterall, I also relaized that it wasn't a circle either.</p>
-    <p></p>
+    <p>Instead I had a "euruka moment", I realized that life can be proved as a series of cirlcles.</p>
+    <p>In each stage of our lives we are given obstacles to overcome, if we give up we are doomed to repeat that cycle and to "live in that circle" as a type of purgatory, but once we conquer that challenge we move to another adjacent circle, we get a brand new challenge and we grow as human beings.</p>
   </div>
   </div>
 </body>
