--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="icon" type="image/png" href="./favicon.ico">
     <link rel="stylesheet" href="./css/style.css"/>
     <script src="./js/console.js"></script>
+    <script src="./js/analytics.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 
 </head>
