remove two dead link s

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="The Circle Theory Explanined" />
     <meta property="og:description" content="a detailed explanation of the circle of life theory by Harry McKinney" />
-    <meta property="og:image" content=" http:// / .png" />
+    <!--<meta property="og:image" content=" http:// / .png" />-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@handle" />
     <meta name="twitter:title" content="The Circle Theory" />
     <meta name="twitter:description" content="a detailed explanation of life as a series of challenges in cirlces" />
-    <meta name="twitter:image" content="https:// .jpg" />
+    <!--<meta name="twitter:image" content="https:// .jpg" />-->
     <title>The Circle Theory</title>
     <link rel="icon" type="image/png" href="./favicon.ico">
     <link rel="stylesheet" href="./css/style.css"/>
