changes to index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     Instead I had a "euruka moment", I realized that life can be proved as a series of cirlcles.</p>
     <p>In each stage of our lives we are given obstacles to overcome, if we give up we are doomed to repeat that cycle and to "live in that circle" as a type of purgatory, but once we conquer that challenge we move to another adjacent circle, we get a brand new challenge and we grow as human beings.</p>
   </div>
+    <div class="circle-container">
+        <div class="circle_1"></div>
+        <div class="circle_2"></div>
+        <div class="circle_3"></div>
+   </div>
   </div>
 </body>
 </html>
