--- a/404.html
+++ b/404.html
@@ -1,1 +1,9 @@
-404 error, better check with Harry :)
+<!DOCTYPE>
+<html>
+<head>
+  <title>404 error</title>
+</head>
+<body>
+</p>404 error, better check with Harry :)</p>
+</body>
+</html>
