--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 
 </head>
-<body>
+<body style="background-color:#000;">
   <div class="container">
     <hr>
       <p class="header">The home of <strong>my Circle Theory of Life</strong> by : <i>Harry McKinney</i> </p>
