--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="The Circle Theory Explanined" />
     <meta property="og:description" content="a detailed explanation of the circle of life theory by Harry McKinney" />
     <!--<meta property="og:image" content=" http:// / .png" />-->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@handle" />
+    <meta name="twitter:card" content="My Circle of Life Theory" />
+    <meta name="twitter:site" content="@harrypmckinney" />
     <meta name="twitter:title" content="The Circle Theory" />
     <meta name="twitter:description" content="a detailed explanation of life as a series of challenges in cirlces" />
     <!--<meta name="twitter:image" content="https:// .jpg" />-->
