change text style

--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>404 error</title>
+  <style>
+  body{text-align:center;}
+  </style>
 </head>
 <body>
 </p>404 error, better check with Harry :)</p>
